# CombineRecSys

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/api/: app.py  endpoints.py
src/data_base/repositories/: base.py
src/models/: __init__.py  base_model.py
src/models/hack_recommend_models/: random_model.py
src/models/team_recommend_models/: random_model.py
src/models/user_recommend_models/: random_model.py
src/service/: api.py  hack_user_recommendation_service.py  team_user_recommendation_service.py  user_team_recommendation_service.py  user_user_recommendation_service.py
src/service/utils/: schemas.py
