[tool.poetry]
name = "combinerecsys"
version = "0.1.0"
description = ""
authors = ["Trubin <trybin420@gmail.com>"]
readme = "README.md"
packages = [{ include = "models", from = "src" },
            { include = "service", from = "src" },]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
