[tool.poetry]
name = "combinerecsys"
version = "0.1.0"
description = ""
authors = ["Trubin <trybin420@gmail.com>"]
readme = "README.md"
packages = [{ include = "models", from = "src" },
            { include = "service", from = "src" },]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.4"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.research.dependencies]
ipykernel = "^6.27.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
